# caskbench

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  DESIGN  HACKING  KNOWN_ISSUES  NEWS  README  README.tests  TODO  compare_runs  config.h.cmake  index.html  json2csv  run_benchmark
CMakeScripts/: cmake_uninstall.cmake.in
CMakeScripts/Modules/: FindCairo.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake  FindPopt.cmake  FindSkia.cmake
cmake/Modules/: FindCairo.cmake
packaging/: caskbench.spec
src/: CMakeLists.txt  Shapes.h  cairo-egl.cpp  cairo-glx.cpp  cairo-image.cpp  cairo-shapes.cpp  cairo-shapes.h  cairo-util.cpp  caskbench.c  caskbench.cpp  caskbench.h  caskbench_context.cpp  caskbench_context.h  caskbench_result.cpp  caskbench_result.h  device_config.h  egl.cpp  egl.h  fill.c  fill.cpp  forward.h  generate_git_info  generate_tests  git_info.h  glx.cpp  glx.h  image.c  image.cpp  image.h  kinetics.cpp  kinetics.h  mask.c  mask.cpp  paint.c  paint.cpp  rnd.cpp  rnd.h  shapes.cpp  shapes.h  skia-egl.cpp  (+11 more)
src/cairo-tests/: animation.cpp  arc.cpp  bezier.cpp  bubbles.cpp  circle.cpp  clip.cpp  cubic.cpp  curves.cpp  fill.cpp  hline.cpp  image-rotate.cpp  image-scale.cpp  image.cpp  line.cpp  linear-gradient.cpp  lines.cpp  mask.cpp  multi-line.cpp  multi-shape.cpp  multishape.cpp  paint.cpp  quad.cpp  quadratic.cpp  radial-gradient.cpp  rect.cpp  rectangles.cpp  roundrect.cpp  shadow.cpp  star.cpp  stroke.cpp  text-glyphs.cpp  text.cpp  transform.cpp  vline.cpp
src/skia-tests/: animation.cpp  arc.cpp  bezier.cpp  bubbles.cpp  circle.cpp  clip.cpp  cubic.cpp  curves.cpp  fill.cpp  hline.cpp  image-rotate.cpp  image-scale.cpp  image.cpp  line.cpp  linear-gradient.cpp  lines.cpp  mask.cpp  multi-line.cpp  multi-shape.cpp  multishape.cpp  paint.cpp  quad.cpp  quadratic.cpp  radial-gradient.cpp  rect.cpp  rectangles.cpp  roundrect.cpp  shadow.cpp  star.cpp  stroke.cpp  text-glyphs.cpp  text.cpp  transform.cpp  vline.cpp
utils/: canvas_perf  compare_runs  flashcanvas  json2csv  make_index  run_benchmark  system_description.sh
